--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,8 @@
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "twilio": "^5.4.2"
+    "node-cron": "^3.0.3",
+    "twilio": "^5.4.2",
+    "xlsx": "^0.18.5"
   }
 }
