--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "js-cookie": "^3.0.5",
+    "multi-range-slider-react": "^2.0.7",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
